# stm8-tests

./: Makefile  README  README.md  meson.build
include/: stm8s.h
openocd/: stm8s103f3.cfg
src/: blink.c  delay.c
